added favicon to header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,25 +1,5 @@
 <head>
 
-    <!--
-         ______   __  __     ______           __   __   __     ______     __     __                   
-        /\__  _\ /\ \_\ \   /\  ___\         /\ \ / /  /\ \   /\  ___\   /\ \  _ \ \                  
-        \/_/\ \/ \ \  __ \  \ \  __\         \ \ \'/   \ \ \  \ \  __\   \ \ \/ ".\ \                 
-           \ \_\  \ \_\ \_\  \ \_____\        \ \__|    \ \_\  \ \_____\  \ \__/".~\_\                
-            \/_/   \/_/\/_/   \/_____/         \/_/      \/_/   \/_____/   \/_/   \/_/                
-                                                                                                      
-         ______   ______     ______     __    __           __  __     ______     ______     ______    
-        /\  ___\ /\  == \   /\  __ \   /\ "-./  \         /\ \_\ \   /\  ___\   /\  == \   /\  ___\   
-        \ \  __\ \ \  __<   \ \ \/\ \  \ \ \-./\ \        \ \  __ \  \ \  __\   \ \  __<   \ \  __\   
-         \ \_\    \ \_\ \_\  \ \_____\  \ \_\ \ \_\        \ \_\ \_\  \ \_____\  \ \_\ \_\  \ \_____\ 
-          \/_/     \/_/ /_/   \/_____/   \/_/  \/_/         \/_/\/_/   \/_____/   \/_/ /_/   \/_____/
-
-         _____________________________________________________________________________________________
-
-         Design by - The View From Here - www.tvfh.com.au
-
-    -->
-
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +11,6 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
-
 	<!-- OG TAGS -->
 	<meta property="og:title" content="{{ site.title }}">
 	<meta property="og:site_name" content="{{ site.title }}">
@@ -40,6 +19,9 @@
 	<meta property="og:type" content="business.business">
 	<meta property="og:image" content="{{ "/assets/social-image.jpg" | prepend: site.baseurl }}">
 
+	<!-- FAVICON -->
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 
 </head>
