--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,13 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="container">
+  	<div class="col-md-6 row">
+  	<p>All rights reserved. QuickRealEstate Copyright © <script>document.write(new Date().getFullYear());</script></p>
+  	</div>
 
+  	<div class="col-md-6">
+  	<p>Privacy | Disclaimer </p>
+  	</div>
   </div>
 
 </footer>
