EOD commit - fixed nav links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,9 +16,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/search.html">Search</a></li>
-        <li><a href="/alerts.html">My Alerts</a></li>
-        <li><a href="/profile.html">My Profile</a></li>
+        <li><a href="{{ site.baseurl }}search.html">Search</a></li>
+        <li><a href="{{ site.baseurl }}alerts.html">My Alerts</a></li>
+        <li><a href="{{ site.baseurl }}profile.html">My Profile</a></li>
         <li><a href="javascript.void(0)" data-toggle="modal" data-target="#signIn">Sign In</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
