--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,4 +2,6 @@
 		"components/modal",
 		"components/header",
 		"components/footer",
-		"components/page";
+		"components/page",
+		"components/signin",
+		"components/alerts";
