--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -1,74 +1,16 @@
-.modal-content {
-	background-color: $brand-color;
-	color: $white;
-	position: relative;
-	overflow: hidden;
-	border: none;
-	padding: 2em;
-	box-shadow: 0px 10px 25px rgba( black , .4);
+.modal {
 
-	&:before {
-		height: 220%;
-		width: 75%;
-		content: ' ';
-		display: block;
-		position: absolute;
-		top: -10%;
-		left: -10%;
-		transform: rotate(-15deg);
-		background-color: rgba($white, .14);
-	}
-
-	.checkbox input[type="checkbox"] {
-
-		&:before {
-			border: 2px solid $white;
-			background-color: $brand-color;
-		}
-
-		&:checked {
-
-			&:before {
-				background-color: $white;
-			}
-
-		}
-
-	}
-
-	.form-control {
-		padding: .75em;
-	}
-
-	.btn-default {
-		color: $brand-color;
-		background-color: $white;
-		border-color: $brand-color;
-
-		&:hover {
-			color: $brand-color;
-			background-color: $white;
-			border-color: $brand-color;
-		}
-
-		&:focus {
-			background-color: $white;
-			color: $brand-color;
-		}
-
-	}
-
-	.btn-arrow {
-		&:after {
-			border-left: 8px solid $light-grey;
-		}
+	.modal-dialog {
+		border-radius: 5px;
+		width: 90%;
+		max-width: 960px;
+		margin: 4em auto;
 	}
 
 }
 
-.modal-dialog {
-	max-width: 480px;
-	border-radius: 5px;
+.modal-content {
+	padding: 2em;
 }
 
 .modal-header {
