--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -1,8 +1,48 @@
 .page-content {
-	padding: 2em 0;
+	padding: 2em 0 6em;
 	
 	.container {
 		padding: 0;
 	}
 	
+}
+
+.page-header {
+	border-bottom: none;
+	margin-bottom: 0;
+}
+
+.page-title {
+	margin-bottom: $spacing-unit;
+
+	h1 {
+		margin: 0 0 .25em;
+	}
+
+}
+
+.add-content {
+	text-align: right;
+	color: $brand-color;
+
+	button {
+		display: inline-block;
+		font-size: 1.5em;
+		height: 1.5em;
+		width: 1.5em;
+		border-radius: 5px;
+		line-height: .75em;
+		margin: .5em;
+
+		&:hover {
+			background-color: $brand-color;
+			color: $white;
+			border-color: $brand-color;
+		}
+
+	}
+
+	h4 {
+		display: inline-block;
+	}
 }
