--- a/_includes/add-alert.html
+++ b/_includes/add-alert.html
@@ -1,4 +1,5 @@
 
+<!-- ADD ALERT MODAL -->
 <div class="modal fade in" id="addAlert">
 
 	<div class="modal-dialog" role="document">
@@ -18,3 +19,4 @@
 		</div>
 	</div>
 </div>
+<!-- END ADD ALERT MODAL -->
