--- a/_includes/alert-form.html
+++ b/_includes/alert-form.html
@@ -1,18 +1,3 @@
-<script type="text/javascript">
-	$(".location-type").select2();
-	$(".purchase-type").select2();
-	$(".bath_min").select2();
-	$(".bath_max").select2();
-	$(".bed_min").select2();
-	$(".bed_max").select2();
-
-	// Without JQuery
-	var slider = new Slider('#ex2', {
-		handle: 'triangle',
-	});
-
-</script>
-
 <div class="col-lg-6">
 	<!-- Location -->
 	<div class="input-group">
@@ -51,9 +36,9 @@
 <div class="col-lg-6">
 
 	<!-- Price Range -->
-	<div class="input-group">
-		<label class="control-label">Price Range</label>
-		<span class="range-label">$0</span> <input id="ex2" type="text" class="span2" value="" data-slider-min="0" data-slider-max="700000" data-slider-step="5" data-slider-value="[0,700000]"/> <span class="range-label"> $700,000</span>
+	<div class="input-group range-slider">
+		<label class="control-label slider-label">Price Range</label>
+		<span class="range-label">$0</span> <input type="text" class="slider-input" value="" data-slider-min="0" data-slider-max="700000" data-slider-step="5" data-slider-value="[0,700000]"/> <span class="range-label"> $700,000</span>
 	</div>
 
 <div class="form-inline input-group">
@@ -107,10 +92,10 @@
 	<!-- Last Name -->
 	<div class="input-group clearfix">
 		<label class="control-label">Alert Expires</label>
-		<input type="date" class="form-control" name="last_name" value="VIC" aria-describedby="">
+		<input type="date" class="form-control" name="last_name" aria-describedby="">
 	</div>
 
-	<button type="submit" class="btn btn-default btn-secondary btn-arrow">Cancel</button>
+	<button type="submit" class="btn btn-default btn-secondary btn-arrow" data-dismiss="modal">Cancel</button>
 	<button type="submit" class="btn btn-default btn-arrow">Save Alert</button>
 
 </div>
