--- a/_includes/edit-alert.html
+++ b/_includes/edit-alert.html
@@ -1,4 +1,5 @@
 
+<!-- EDIT ALERT MODAL -->
 <div class="modal fade in" id="editAlert">
 
 	<div class="modal-dialog" role="document">
@@ -7,7 +8,7 @@
 <div class="modal-header">
 	<h1>Edit Alert</h1>
 </div>
-<div class="modal-body">
+<div class="modal-body clearfix">
 	<form>
 
 		{% include alert-form.html %}
@@ -18,3 +19,4 @@
 		</div>
 	</div>
 </div>
+<!-- END EDIT ALERT MODAL -->
