--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
 
     {% include footer.html %}
 
+	<!-- Base Scripts -->
+	<script type="text/javascript" src="js/main.js"></script>
+
   </body>
 
 </html>
