--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -14,6 +14,7 @@
 
 .page-title {
 	margin-bottom: $spacing-unit;
+	padding: 0;
 
 	h1 {
 		margin: 0 0 .25em;
@@ -24,6 +25,7 @@
 .add-content {
 	text-align: right;
 	color: $brand-color;
+	padding: 0;
 
 	button {
 		display: inline-block;
@@ -33,6 +35,7 @@
 		border-radius: 5px;
 		line-height: .75em;
 		margin: .5em;
+		margin-right: 0;
 
 		&:hover {
 			background-color: $brand-color;
