--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-
+@import 'bourbon';
 
 // Our variables
 $base-font-family: "Avenir", Helvetica, Arial, sans-serif;
@@ -45,6 +45,64 @@ $on-laptop:        800px;
     }
 }
 
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('/assets/fonts/icomoon.eot?fhe97z');
+  src:  url('/assets/fonts/icomoon.eot?fhe97z#iefix') format('embedded-opentype'),
+    url('/assets/fonts/icomoon.ttf?fhe97z') format('truetype'),
+    url('/assets/fonts/icomoon.woff?fhe97z') format('woff'),
+    url('/assets/fonts/icomoon.svg?fhe97z#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon"]:before, [class*=" icon"]:before, [class^="icon"]:after, [class*=" icon"]:after {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.edit:after {
+	font-family: 'icomoon' !important;
+	content: "\e900";
+	display: inline-block;
+	margin-left: .25em;
+	font-size: 1em;
+}
+.delete:after {
+	font-family: 'icomoon' !important;
+	content: "\e901";
+	display: inline-block;
+	margin-left: .25em;
+}
+
+.baths:before {
+  content: "\e902";
+  font-family: 'icomoon' !important;
+}
+.beds:before {
+  content: "\e903";
+  font-family: 'icomoon' !important;
+}
+.cars:before {
+  content: "\e904";
+  font-family: 'icomoon' !important;
+}
+
+@include keyframes(stroke) {
+  0% { stroke-dashoffset: 0 }
+  0% { stroke-dashoffset: 47 }
+}
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
