--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -177,6 +177,7 @@ pre {
     margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
+    float: none;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
