--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -8,6 +8,7 @@
 	margin: 1em;
 	border-color: $brand-color;
 	transition: all .3s ease;
+	text-align: center;
 
 	&:hover {
 		color: $white;
@@ -51,12 +52,14 @@
 }
 
 .btn-arrow {
-	border-radius: 0;
+	border-radius: 5px;
+	border: none;
 	position: relative;
 	display: inline-block;
 	margin: 1em 0;
-	padding: .325em 2em .325em .75em;
+	padding: .325em 1em;
 
+/* Hidden arrow in button container
 	&:after {
 		content: ' ';
 		position: absolute;
@@ -69,6 +72,7 @@
 		border-bottom: 8px solid transparent;
 		border-left: 8px solid $dark-blue;
 	}
+*/
 
 	&:hover {
 		box-shadow: 0px 5px 7px rgba(black, .2);
