--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -3,6 +3,7 @@
 	padding: 1.5em 0;
 	border-bottom: none;
 	box-shadow: 0px 10px 25px rgba($grey, .3);
+	margin-bottom: 0;
 }
 
 .navbar-header {
@@ -58,7 +59,7 @@
 	background-position: 0 100%;
 	background-repeat: repeat-x;
 	background-size: 60px;
-	padding-bottom: 1em;
+	padding: 1.5em 0 1em;
 	font-size: 1.325rem;
 
 	.greeting {
