how it works SVG working on desktop

--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -201,6 +201,34 @@ label {
 
 }
 
+.blue {
+
+	h3 {
+		color: $white;
+	}
+
+	a p {
+		color: $white;
+		opacity: .7;
+	}
+
+	&.search-bar {
+		padding: 2em 0;
+		margin-top: 2em;
+
+		.search {
+			z-index: 10;
+		}
+
+		.btn-default {
+			margin-top: 0;
+			margin-left: 2em;
+		}
+
+	}
+
+}
+
 /*					    *\
    FORM RESPONSE STATES
 \*						*/
