--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,8 @@
 ---
 @charset "utf-8";
 
-
+// Import Bourbon
+@import 'bourbon';
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
