made home / how it works responsive

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,5 +3,7 @@
 		"components/header",
 		"components/footer",
 		"components/page",
+		"components/listings",
 		"components/signin",
-		"components/alerts";
+		"components/alerts",
+		"components/responsive";
