--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -9,7 +9,7 @@ footer {
 	background-repeat: repeat-x;
 	background-size: 60px;
 
-	.col-md-6 {
+	.col-sm-6 {
 		font-size: 1.325rem;
 
 		&:last-child {
