--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="site-footer">
 
   <div class="container">
-  	<div class="col-md-6 row">
+  	<div class="col-sm-6 row">
   	<p>All rights reserved. QuickRealEstate Copyright © <script>document.write(new Date().getFullYear());</script></p>
   	</div>
 
-  	<div class="col-md-6">
+  	<div class="col-sm-6 row">
   	<p>Privacy | Disclaimer </p>
   	</div>
   </div>
