--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -154,6 +154,12 @@
 			.panel-footer {
 				background-color: $white;
 				border-top: none;
+				padding: 0;
+
+				.btn-default {
+					width: 100%;
+					border-color: $brand-color;
+				}
 			}
 
 		}
@@ -194,258 +200,4 @@
 
 }
 
-/* 					*\
-	 HOW IT WORKS
-\*					*/
-.how-it-works {
-
-	section {
-		position: relative;
-		border-bottom: 2px dashed rgba($grey, .6);
-
-		span {
-			padding: 1.5em 1em;
-			min-height: 150px;
-
-			&:nth-child(even) {
-				background-color: rgba($brand-color, .1);
-			}
-		}
-
-		svg {
-			bottom: 35px;
-			position: absolute;
-			left: 39%;
-
-			path, line, polyline, rect, circle, polygon {
-			    transition: all 1s ease;
-			}
-		}
-
-		&#sectionOne {
-			border-top: 2px solid $brand-color;
-			margin-top: 2em;
-		}
-
-		&#sectionFive {
-			border-bottom: 2px solid $brand-color;
-			margin-bottom: 2em;
-		}
-
-		/* SECTION ONE SVGS */
-		#male_agent {
-			right: 36%;
-			left: auto;
-		}
-
-		#female_agent {
-			left: 36%;
-		}
-
-		#sectionOneArrow {
-			bottom: -40px;
-
-			polyline {
-			    stroke-dasharray: 200,285;
-			    stroke-dashoffset: 200;
-			    transition: all 1s ease;
-			}
-
-			path, line {
-				position: relative;
-				opacity: 0;
-			    @include transform( translate(0, -105px) );
-			}
-		}
-
-		/* SECTION TWO SVGS */
-		#sectionTwoArrowRight {
-			bottom: -20px;
-			left: 38.75%;
-
-			polyline {
-				stroke-dasharray: 200;
-				stroke-dashoffset: -150px;
-			}
-		}
-
-		#qre_logo {
-			left: 46%;
-			bottom: 10px;
-		}
-
-		#handOne {
-			@include transform-origin(60% 92%);
-			@include transform( rotate(0deg) );
-			@include animation( hands 2s linear );
-			@include animation-iteration-count(1);
-		}
-
-		#handTwo {
-			@include transform-origin(20% 0%);
-			@include transform( rotate(0deg) );
-			@include animation( hands .5s linear );
-			@include animation-iteration-count(4);
-		}
-
-		#phoneGroup {
-			left: auto;
-		    right: 34.75%;
-		    bottom: -20px;
-		}
-
-		#phone {
-			@include transform(rotate(0deg));
-			@include transform-origin(50% 50%);
-			@include animation(ring 1.75s ease);
-			@include animation-iteration-count(infinite);
-		}
-
-		#innerSignal {
-			opacity: 0;
-			@include transform( translate(-10px, 5px) );
-			@include animation(signals 1.75s ease);
-			@include animation-iteration-count(infinite);
-		}
-
-		#outterSignal {
-			opacity: 0;
-			@include transform( translate(-10px, 5px) );
-			@include animation(signals 1.75s ease);
-			@include animation-delay(.25s);
-			@include animation-iteration-count(infinite);
-		}
-
-		/* SECTION THREE SVGS */
-		#female_agentTwo {
-			left: auto;
-			right: 36.25%;
-		}
-
-		#houseListing {
-			left: 35.9%;
-		}
-
-		/* SECTION FOUR SVGS */
-		#sold {
-			left: auto;
-			right: 34%;
-			bottom: 45px;
-			@include transform-origin(50% 50%);
-			@include animation( ring 4s ease );
-			@include animation-delay(.25s);
-			@include animation-iteration-count(infinite);
-		}
-
-		#circleIcons {
-			left: 27%;
-			bottom: 40px;
-		}
-
-		#pencil {
-			@include transform( rotate(0deg) );
-			@include transform-origin(50% 50%);
-			@include animation( spin 2s ease );
-			@include animation-iteration-count(infinite);
-		}
-
-		#camera {
-			@include transform-origin(50% 50%);
-			@include animation( camera 2s ease );
-			@include animation-delay(.25s);
-			@include animation-iteration-count(infinite);
-		}
-
-		#checkOne .check{
-			opacity: 0;
-			@include transform-origin(50% 50%);
-			@include animation(scale 2s ease);
-			@include animation-delay(.0s);
-			@include animation-iteration-count(infinite);
-		}
-		#checkTwo .check {
-			opacity: 0;
-			@include transform-origin(50% 50%);
-			@include animation(scale 2s ease);
-			@include animation-delay(.25s);
-			@include animation-iteration-count(infinite);
-		}
-		#checkThree .check {
-			opacity: 0;
-			@include transform-origin(50% 50%);
-			@include animation(scale 2s ease);
-			@include animation-delay(.5s);
-			@include animation-iteration-count(infinite);
-		}
-
-		/* SECTION FIVE SVGS */
-		#computerGroup {
-			left: 35%;
-		}
-
-		#contentTwo, #contentOne {
-			opacity: 0;
-			@include animation(computerContent 5s ease);
-			@include animation-iteration-count(infinite);
-		}
-
-		#contentTwo {
-			@include animation-delay(.125s);
-		}
-
-	}
-
-}
-
-// Animate Phone
-@include keyframes(signals) {
-	0% { @include transform( translate(-10px, 5px) ); opacity: 0;}
-	50% { @include transform( translate( 0px, 0px) ); opacity: .5;}
-	100% { @include transform( translate( 0px, 0px) ); opacity: 0; }
-}
-
-@include keyframes(ring) {
-	0% {  @include transform( roate(0deg) ) }
-	50% { @include transform( rotate(5deg) )}
-	100% {  @include transform( roate(0deg) ) }
-}
-
-@include keyframes(spin) {
-	0% {  @include transform( rotate(0deg) ) }
-	35% { @include transform( rotate(375deg) )}
-	50% { @include transform( rotate(360deg) )}
-	100% {  @include transform( rotate(365deg) ) }
-}
-
-// Animate Logo
-@include keyframes(hands) {
-	0% { @include transform( rotate(0deg) ) }
-	100% { @include transform( rotate(360deg) ) }
-}
-
-// Check animations 
-@include keyframes(scale) {
-	0% { @include transform(scale(0,0) ); opacity: 0;}
-	25% { @include transform( scale(1.125) ); opacity: 1;}
-	35% { @include transform( scale(1) ); opacity: 1; }
-	75% { @include transform( scale(1) ); opacity: 1; }
-	100% { @include transform( scale(1) ); opacity: 0; }
-}
-
-// Camera
-@include keyframes(camera) {
-	0% { @include transform( translate(0px, 75px) rotate(-45deg) ); opacity: 0;}
-	25% { @include transform( translate( 0px, -10px )  rotate(60deg) ); opacity: 1;}
-	50% { @include transform( translate( 0px, 2px)  rotate(10deg) )}
-	85% { @include transform( translate( 0px, 0px) rotate(15deg) ); opacity: 1;}
-	100% { @include transform( translate( 0px, 75px)  rotate(45deg) ); opacity: 0;}
-}
-
-// Computer content 
-@include keyframes(computerContent) {
-	0% { @include transform( translate( 0px, 8px) ); opacity: 0;}
-	25% { @include transform( translate( 0, -3px) ); opacity: .6;}
-	35% { @include transform( translate( 0, 0) ); }
-	85% { @include transform( translate( 0, 0) ); opacity: .6;}
-	100% { @include transform( translate( 0, 2px) ); opacity: 0;}
-}
+@import 'how-it-works';
