added login to header

--- a/_includes/header-two.html
+++ b/_includes/header-two.html
@@ -16,9 +16,10 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}login.html">Get Alerts</a></li>
         <li><a href="{{ site.baseurl }}how-it-works.html">How It Works</a></li>
+        <li><a href="{{ site.baseurl }}register.html">Get Alerts</a></li>
         <li><a href="{{ site.baseurl }}agent.html">List A Property</a></li>
+        <li><a href="{{ site.baseurl }}login.html">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- nav container -->
