--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,7 @@
 <footer class="site-footer">
 
-  <div class="container">
-  	<div class="col-sm-6 row">
-  	<p>All rights reserved. QuickRealEstate Copyright © <script>document.write(new Date().getFullYear());</script></p>
-  	</div>
+  <div class="wrapper">
 
-  	<div class="col-sm-6 row">
-  	<p>Privacy | Disclaimer </p>
-  	</div>
   </div>
 
 </footer>
