--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,38 +1,17 @@
 <header class="site-header">
 
-<nav class="navbar navbar-default navbar-static-top">
-  <div class="container">
+  <div class="wrapper">
 
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="{{ site.baseurl }}/" href="index.html"><img src="assets/qre-logo.svg"></a>
-    </div>
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}search.html">Search</a></li>
-        <li><a href="{{ site.baseurl }}alerts.html">My Alerts</a></li>
-        <li><a href="{{ site.baseurl }}profile.html">My Profile</a></li>
-        <li><a href="login.html">Sign In</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- nav container -->
-</nav>
+    <nav class="site-nav">
+        {% for my_page in site.pages %}
+          {% if my_page.title %}
+          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+          {% endif %}
+        {% endfor %}
+    </nav>
+
+  </div>
 
 </header>
-
-{% if page.status == 'logged-in' %}
-  <div class="user-welcome">
-    <div class="container">
-      <p><span class="greeting">Welcome,</span> Jane Fonda</p>
-    </div>
-  </div>
-{% else %}
-
-{% endif %}
