--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,22 @@
 <head>
+    <!--
+         ______   __  __     ______           __   __   __     ______     __     __                   
+        /\__  _\ /\ \_\ \   /\  ___\         /\ \ / /  /\ \   /\  ___\   /\ \  _ \ \                  
+        \/_/\ \/ \ \  __ \  \ \  __\         \ \ \'/   \ \ \  \ \  __\   \ \ \/ ".\ \                 
+           \ \_\  \ \_\ \_\  \ \_____\        \ \__|    \ \_\  \ \_____\  \ \__/".~\_\                
+            \/_/   \/_/\/_/   \/_____/         \/_/      \/_/   \/_____/   \/_/   \/_/                
+                                                                                                      
+         ______   ______     ______     __    __           __  __     ______     ______     ______    
+        /\  ___\ /\  == \   /\  __ \   /\ "-./  \         /\ \_\ \   /\  ___\   /\  == \   /\  ___\   
+        \ \  __\ \ \  __<   \ \ \/\ \  \ \ \-./\ \        \ \  __ \  \ \  __\   \ \  __<   \ \  __\   
+         \ \_\    \ \_\ \_\  \ \_____\  \ \_\ \ \_\        \ \_\ \_\  \ \_____\  \ \_\ \_\  \ \_____\ 
+          \/_/     \/_/ /_/   \/_____/   \/_/  \/_/         \/_/\/_/   \/_____/   \/_/ /_/   \/_____/
+
+         _____________________________________________________________________________________________
+
+         Design by - The View From Here - www.tvfh.com.au
+
+    -->
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +25,14 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+	<!-- JS -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ "js/angular.min.js" | prepend: site.baseurl }}"></script>
+	<script type="text/javascript" src="{{ "js/scripts.js" | prepend: site.baseurl }}"></script>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"> 
 
 	<!-- OG TAGS -->
 	<meta property="og:title" content="{{ site.title }}">
