--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
 <html>
+  <head>
+      <!-- LeviDPS - levidps.com -->
 
-  {% include head.html %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+    <!-- JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ "js/scripts.js" | prepend: site.baseurl }}"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"> 
+
+    <!-- OG TAGS -->
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:site_name" content="{{ site.title }}">
+    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <meta property="og:type" content="business.business">
+    <meta property="og:image" content="{{ "./_assets/social-image.jpg" | prepend: site.baseurl }}">
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" sizes="48x48" href="./_assets/_ico/favico-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./_assets/_ico/favico-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./_assets/_ico/favico-16x16.png">
+    <link rel="shortcut icon" href="./_assets/_ico/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./_assets/_ico/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="manifest.json">
+
+  </head>
+  <!-- BEGIN HTML BODY -->
   <body>
 
     {% include header.html %}
@@ -16,5 +49,45 @@
     {% include footer.html %}
 
   </body>
+  <!-- END HTML BODY -->
+
+  <!-- SCHEMA -->
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "",
+      "name": "",
+      "description": "",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "",
+        "addressLocality": "",
+        "addressRegion": "",
+        "postalCode": "",
+        "addressCountry": ""
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": ,
+        "longitude": , 
+      },
+      "url": ""
+      "telephone": "",
+      "email": "",
+      "logo": "",
+    }
+  </script>
+
+
+  <!-- GOOGLE ANALYTICS -->
+  <script>
+    var GAcode = {{ site.google_anlytics }} // YOUR ANALYTICS CODE HERE
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', GAcode, 'auto');
+      ga('send', 'pageview');
+  </script>
 
 </html>
